Removes Rhino, adds lang3, adds preview, fixes captions